# BitEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json.lnk
.cache/clangd/index/: Application.cpp.7F665A5EA316C546.idx  Bit.h.301AFBF4392DA207.idx  Log.cpp.E9BC9C96BF42267C.idx  SandboxApplication.cpp.8B36CB726F401688.idx
Bit/: CMakeLists.txt
Bit/Src/Bit/Core/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  Logger.cpp  Logger.h  Window.cpp  Window.h
Bit/Src/Bit/Events/: KeyEvent.h
Bit/Src/Bit/Math/: Vector.h
Bit/Src/Bit/Renderer/: Buffers.cpp  Buffers.h  GraphicsContext.h  Shader.cpp  Shader.h  VertexArray.h
Bit/assets/shaders/: BasicTexture.glsl  CircleShader.glsl  ComputeShader.glsl  FrenselOutline.glsl  LineShader.glsl  PhongShader.glsl  QuadShader.glsl  Shader2D.glsl  basicTexture.glsl  quad_shader.glsl  raymarching.glsl
Bit/src/: Bit.h  Bitpch.h
Bit/src/Backend/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLContextLinux.cpp  OpenGLContextLinux.h  OpenGLContextWindows.cpp  OpenGLContextWindows.h  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp
Bit/src/Bit/: Application.h  Bit.h  EntryPoint.cpp
Bit/src/Bit/Animations/: Animation2D.cpp  Animation2D.h
Bit/src/Bit/Assets/: AssetManager.cpp  AssetManager.h
Bit/src/Bit/Containers/: BQueue.h  darray.cpp  darray.h
Bit/src/Bit/Core/: Application.cpp  Application.h  BMemory.cpp  BMemory.h  Clock.cpp  Clock.h  Core.h  Defines.h  EntryPoint.cpp  Event.cpp  Event.h  File.h  Game.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Platform.cpp  Platform.h  TimeStamp.h  Window.cpp  Window.h
Bit/src/Bit/Core/Memory/: ArenaAllocator.cpp  ArenaAllocator.h  BMemory.cpp  BMemory.h
Bit/src/Bit/Core/Renderer/: GraphicsContext.cpp  GraphicsContext.h  Shader.h
Bit/src/Bit/ECS/: Compontents.h  EntityManager.cpp  EntityManager.h
Bit/src/Bit/ECS/Systems/: Animation2DSystem.h  CollisionSystem.h  InputSystem.h  Physics2DSystem.h  RenderSystem.h  System.cpp  System.h  UIRenderSystem.h
Bit/src/Bit/Editor/: TileEditor.cpp  TileEditor.h  TilemapEditor.h
Bit/src/Bit/Event/: Event.h
Bit/src/Bit/Events/: WindowEvent.h
Bit/src/Bit/Font/: Font.cpp  Font.h
Bit/src/Bit/Math/: BMath.cpp  BMath.h  Matrix.cpp  Matrix.h  Random.cpp  Random.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
Bit/src/Bit/Particles/: ParticleSystem.cpp  ParticleSystem.h
Bit/src/Bit/Physics/: BCollision.cpp  BCollision.h  BPhysics.cpp  BPhysics.h  BPhysicsTypes.h  Physics2D.cpp  Physics2D.h  PhysicsTypes.h
Bit/src/Bit/Profiler/: Profiler.h
Bit/src/Bit/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Camera3DManager.cpp  Camera3DManager.h  CameraManager.cpp  CameraManager.h  ComputeShader.cpp  ComputeShader.h  Geometry.cpp  Geometry.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Bit/src/Bit/Resources/: AssetManager.cpp  AssetManager.h  AssetStore.cpp  AssetStore.h  GeometryManager.cpp  GeometryManager.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ResourceTypes.h  ShaderManager.cpp  ShaderManager.h  TextureManager.h
Bit/src/Bit/Scene/: Compontents.h  Entity.cpp  Entity.h  Entity.inl  EntityManager.cpp  EntityManager.h
Bit/src/Bit/Systems/: Animation2DSystem.h  CameraSystem.h  CollisionSystem.h  InputSystem.h  MovementSystem.h  Physics2DSystem.h  RenderSystem.h  System.cpp  System.h  UIRenderSystem.h
Bit/src/Bit/Tiles/: Tile.cpp  Tile.h  TileEditorState.cpp  TileEditorState.h  TileLayer.cpp  TileLayer.h  TileMap.cpp  TileMap.h  TileRenderer.cpp  TileRenderer.h
Bit/src/Bit/UI/: BitUI.cpp  BitUI.h  Widgets.cpp  Widgets.h
Bit/src/Bit/Utils/ImageLoader/: BMPLoader.cpp  BMPLoader.h  ImageLoader.cpp  ImageLoader.h
Bit/src/Bit/Utils/Loaders/: AssetLoader.cpp  AssetLoader.h
Bit/src/Bit/Utils/MemoryPool/: Pool.h
Bit/src/Platform/: Platform.cpp  Platform.h  PlatformLinux.cpp  PlatformLinux.h  PlatformWindows.cpp  PlatformWindows.h
Bit/src/Platform/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLContextLinux.cpp  OpenGLContextLinux.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Bit/src/Platform/Windows/: CrsPlatWindow.cpp  CrsPlatWindow.h  PlatformLinux.cpp  PlatformLinux.h  PlatformWindows.h
Games/: CMakeLists.txt
Games/3DGame/: CMakeLists.txt
Games/3DGame/src/: 3DGame.cpp  3DGame.h  3DGameEntry.cpp
Games/ComputeShaderTest/: CMakeLists.txt
Games/ComputeShaderTest/src/: ComputeShader.cpp  ComputeShader.h  ComputeShaderEntry.cpp
Games/Dystopia/: CMakeLists.txt
Games/Dystopia/src/: Dystopia.cpp  Dystopia.h  DystopiaEntry.cpp  PlayerController.cpp  PlayerController.h
Games/PoolGame/: CMakeLists.txt
Games/PoolGame/src/: PoolGame.cpp  PoolGame.h  PoolGameEntry.cpp  TestGame.cpp
Games/Rabbit/: CMakeLists.txt
Games/Rabbit/src/: Dystopia.cpp  Dystopia.h  DystopiaEntry.cpp
Games/RayMarching/: CMakeLists.txt
Games/RayMarching/src/: RayMarching.cpp  RayMarching.h  RayMarchingEntry.cpp
Games/src/: GameEntry.cpp  TestGame.cpp  TestGame.h
Sandbox/: CMakeLists.txt
Sandbox/Src/: Sandbox.cpp  Sandbox.h  SandboxApplication.cpp
Sandbox/src/: SandboxApplication.cpp
